<resources>
    <string name="app_name">WeatherAlarm</string>
    <string name="add_alarm">Add alarm</string>
    <string name="modify_alarm">Modify alarm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="alarm">Alarm</string>
    <string name="name">Name</string>
    <string name="set_alarm_name">Enter alarm name</string>
    <string name="ringtone">Ringtone</string>
    <string name="midnight">00:00</string>
    <string name="monday">Monday</string>
    <string name="snooze">Snooze</string>
    <string name="stop">Stop</string>
    <string-array name="ringtones">
        <item>Aura tone</item>
        <item>Day break</item>
        <item>Early riser</item>
        <item>Fresh start</item>
        <item>Happy day</item>
        <item>Morning birds</item>
        <item>Ping</item>
        <item>Slow morning</item>
        <item>Soft chime</item>
        <item>Weather forecast</item>
    </string-array>
</resources>