<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addAlarmToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/timePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/addAlarmToolbar"
        app:layout_constraintEnd_toStartOf="@id/addAlarmTextView"
        app:layout_constraintStart_toStartOf="@id/addAlarmToolbar"
        app:layout_constraintTop_toTopOf="@id/addAlarmToolbar" />

    <TextView
        android:id="@+id/addAlarmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_alarm"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/addAlarmToolbar"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintTop_toTopOf="@id/addAlarmToolbar" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/addAlarmToolbar"
        app:layout_constraintEnd_toEndOf="@id/addAlarmToolbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/addAlarmTextView"
        app:layout_constraintTop_toTopOf="@id/addAlarmToolbar" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:amPmTextColor="@color/primary"
        android:numbersTextColor="@color/primary"
        android:theme="@style/timePicker"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <com.dpro.widgets.WeekdaysPicker
        android:id="@+id/weekDaysPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:background_color="@color/white"
        app:border_color="@color/primary"
        app:highlight_color="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timePicker"
        app:layout_constraintVertical_bias="0.1"
        app:sunday_first_day="false" />

    <TextView
        android:id="@+id/setNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/setNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weekDaysPicker"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/setNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints="notApplicable"
        android:ems="10"
        android:hint="@string/set_alarm_name"
        android:inputType="textShortMessage|text"
        android:text="@string/alarm"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/setNameTextView"
        app:layout_constraintTop_toBottomOf="@id/weekDaysPicker"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>